Cherry-pick ed7fed17c5ac. rdar://problem/89564973

REGRESSION: CSS scroll-behavior: smooth with overflow: hidden breaks JS scrollTo/scrollLeft/scrollTop
    https://bugs.webkit.org/show_bug.cgi?id=238497
    <rdar://90990040>

    Reviewed by Simon Fraser.

    Add scrollable area to frame view's list of scrollable areas if necessary in scrollToOffset.
    This is necessary as Document::runScrollSteps() looks through the list of scrollable areas
    to service animations on the scrollable area. It is necessary to add the scrollable area
    in scrollToOffset as for a scrollable area that is not user scrollable (such as a scrollable
    area with overflow: hidden) it would not be added, so the animation would not occur.

    * LayoutTests/fast/scrolling/smooth-scroll-with-overflow-hidden-expected.txt: Added.
    * LayoutTests/fast/scrolling/smooth-scroll-with-overflow-hidden.html: Added.
    * Source/WebCore/page/scrolling/ScrollingCoordinator.cpp:
    (WebCore::ScrollingCoordinator::absoluteEventTrackingRegionsForFrame const):
    * Source/WebCore/platform/ScrollableArea.h:
    (WebCore::ScrollableArea::isVisibleToHitTesting const):
    * Source/WebCore/rendering/RenderLayerScrollableArea.cpp:
    (WebCore::RenderLayerScrollableArea::clear):
    (WebCore::RenderLayerScrollableArea::scrollToOffset):
    (WebCore::RenderLayerScrollableArea::isVisibleToHitTesting const):
    (WebCore::RenderLayerScrollableArea::updateScrollableAreaSet):
    (WebCore::RenderLayerScrollableArea::registerScrollableArea):
    * Source/WebCore/rendering/RenderLayerScrollableArea.h:

    Canonical link: https://commits.webkit.org/251454@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295448 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.746@safari-613-branch