Source/WebCore/platform/ScrollableArea.h
@@ -289,6 +289,8 @@ public:
         LegacyIOSDocumentVisibleRect = ContentsVisibleRect
 #endif
     };
+    
+    virtual bool isVisibleToHitTesting() const { return false; };
 
     WEBCORE_EXPORT IntRect visibleContentRect(VisibleContentRectBehavior = ContentsVisibleRect) const;
     WEBCORE_EXPORT IntRect visibleContentRectIncludingScrollbars(VisibleContentRectBehavior = ContentsVisibleRect) const;
