Source/WebCore/rendering/RenderLayerScrollableArea.cpp
@@ -84,8 +84,6 @@ RenderLayerScrollableArea::~RenderLayerScrollableArea()
 void RenderLayerScrollableArea::clear()
 {
     auto& renderer = m_layer.renderer();
-    ASSERT(m_registeredScrollableArea == renderer.view().frameView().containsScrollableArea(this));
-
     if (m_registeredScrollableArea)
         renderer.view().frameView().removeScrollableArea(this);
 
@@ -281,6 +279,8 @@ ScrollOffset RenderLayerScrollableArea::scrollToOffset(const ScrollOffset& scrol
         scrollAnimator().cancelAnimations();
         stopAsyncAnimatedScroll();
     }
+    
+    registerScrollableArea();
 
     ScrollOffset clampedScrollOffset = options.clamping == ScrollClamping::Clamped ? clampScrollOffset(scrollOffset) : scrollOffset;
     if (clampedScrollOffset == this->scrollOffset())
@@ -1619,6 +1619,12 @@ bool RenderLayerScrollableArea::scrollingMayRevealBackground() const
 {
     return scrollsOverflow() || usesCompositedScrolling();
 }
+bool RenderLayerScrollableArea::isVisibleToHitTesting() const
+{
+    auto& renderer = m_layer.renderer();
+    FrameView& frameView = renderer.view().frameView();
+    return renderer.visibleToHitTesting() && frameView.isVisibleToHitTesting();
+}
 
 void RenderLayerScrollableArea::updateScrollableAreaSet(bool hasOverflow)
 {
@@ -1631,8 +1637,6 @@ void RenderLayerScrollableArea::updateScrollableAreaSet(bool hasOverflow)
 
     bool isScrollable = hasOverflow && isVisibleToHitTest;
     bool addedOrRemoved = false;
-
-    ASSERT(m_registeredScrollableArea == frameView.containsScrollableArea(this));
 
     if (isScrollable) {
         if (!m_registeredScrollableArea) {
@@ -1657,6 +1661,17 @@ void RenderLayerScrollableArea::updateScrollableAreaSet(bool hasOverflow)
 #else
     UNUSED_VARIABLE(addedOrRemoved);
 #endif
+}
+
+void RenderLayerScrollableArea::registerScrollableArea()
+{
+    auto& renderer = m_layer.renderer();
+    FrameView& frameView = renderer.view().frameView();
+
+    if (!m_registeredScrollableArea) {
+        frameView.addScrollableArea(this);
+        m_registeredScrollableArea = true;
+    }
 }
 
 void RenderLayerScrollableArea::updateScrollCornerStyle()
