Source/WebCore/rendering/RenderLayerScrollableArea.h
@@ -240,6 +240,7 @@ public:
     void updateLayerPositionsAfterDocumentScroll();
 
     std::optional<LayoutRect> updateScrollPosition(const ScrollPositionChangeOptions&, const LayoutRect& revealRect, const LayoutRect& localExposeRect);
+    bool isVisibleToHitTesting() const final;
 
 private:
     bool hasHorizontalOverflow() const;
@@ -266,6 +267,7 @@ private:
     void clearResizer();
 
     void updateScrollbarPresenceAndState(std::optional<bool> hasHorizontalOverflow = std::nullopt, std::optional<bool> hasVerticalOverflow = std::nullopt);
+    void registerScrollableArea();
 
 private:
     bool m_scrollDimensionsDirty { true };
